# elsewhere

./: README.md  pyproject.toml  setup.cfg
elsewhere/: effect.py
src/elsewhere/effects/: __init__.py  algebra.py  spacelike.py
src/elsewhere/runners/: __init__.py  algebra.py  bigraph.py
tests/: conftest.py  test_imports.py
tests/effects/: test_spacelike.py
tests/runners/: test_bigraph.py
