
# package =====================================================================

[metadata]
name = elsewhere
version = 0.0.1
author = Ryan Spangler, Boyan Beronov, Jeremy Zucker
author_email = ryan.spangler@gmail.com, b.beronov@gmail.com, jeremy.zucker@pnnl.gov
description = Algebraic effects API for the `process-bigraph` framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prismofeverything/elsewhere
platforms = all
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Interpreters
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Framework :: Pytest

[options]
python_requires = >=3.12
install_requires =
    bigraph @ git+https://github.com/prismofeverything/bigraph.git@main
    effectful @ git+https://github.com/BasisResearch/effectful.git@master
    multipledispatch >= 1.0
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = elsewhere*

[options.extras_require]
tests =
    flake8 >= 7.1
    pylint >= 3.3
    pytest >= 8.3
    tox >= 4.23

# test suite ==================================================================

[tox:tox]
requires =
    setuptools >= 70
    tox >= 4.23
    platformdirs
isolated_build = false
usedevelop = false
envlist =
    test
    style
    lint

[testenv]
skip_install = true
skipsdist = true
sitepackages = true
changedir = {toxinidir}
setenv =
    pythonpath = {toxinidir}/src
allowlist_externals =
    pytest
    flake8
    pylint

[testenv:test]
commands =
    pytest

[testenv:style]
commands =
    flake8 src tests

[testenv:lint]
skipsdist = false
skip_install = false
extras = tests
commands =
    pylint src tests

# test tools ==================================================================

[flake8]
extend-exclude =
    .venv, .cache, build, .pytest_cache
per-file-ignores =
    */__init__.py:F401
extend-ignore = E702
indent-size = 2
max-line-length = 79
